fixing style of audio element on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -273,6 +273,15 @@ h3 {
   .score-sect {
     font-size: 0.76em; }
 
+  .audio-sect {
+    height: 77px; }
+
+  audio {
+    margin: 0 auto;
+    height: 50px;
+    vertical-align: middle;
+    line-height: 77px; }
+
   .answer-box p {
     font-size: 0.75em; } }
 @media only screen and (max-width: 375px) {
