--- a/scss/media/_media-queries.scss
+++ b/scss/media/_media-queries.scss
@@ -65,6 +65,15 @@
     .score-sect {
         font-size: 0.76em;
     }
+    .audio-sect {
+        height: 77px;
+    }
+    audio {
+        margin: 0 auto;
+        height: 50px;
+        vertical-align: middle;
+        line-height: 77px;
+    }
     .answer-box p {
         font-size: 0.75em;
     }
